# BlokusIA

./: CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
apps/game/: Board.cpp  Board.h  BoardGraphicsItem.cpp  BoardGraphicsItem.h  GameConstants.h  Piece.cpp  Piece.h  PieceGraphicsItem.cpp  PieceGraphicsItem.h  PlayerPiecesGraphicsItem.cpp  PlayerPiecesGraphicsItem.h
apps/i18n/: TranslationManager.cpp  TranslationManager.h  blokus_fr.qm  blokus_fr.ts  translations.qrc
apps/interfaces/: IThemeable.h  ITranslatable.h
apps/resources/: app.qrc  app.rc
apps/resources/dark/: colors.xml
apps/resources/light/: colors.xml
apps/theme/: ThemeManager.cpp  ThemeManager.h
apps/themes/: ThemeManager.cpp  ThemeManager.h
apps/themes/dark/: style.qrc
apps/themes/light/: style.qrc
apps/utils/: DrawUtils.cpp  DrawUtils.h  XmlConfigReader.cpp  XmlConfigReader.h
apps/widgets/: BlokusGraphicsView.cpp  BlokusGraphicsView.h  GameView.cpp  GameView.h
cmake/: QtHelpers.cmake
include/AI/: AITournament.h  BlokusAI.h  BlokusGame.h  BlokusGameHelpers.h  Cache.h  FourPlayerMaxN_AI.h  GenericMinMax_AI.h  GenericMinMax_IA.h  IterativeAI.h  MoveHeuristicGuided_AI.h  ParanoidFourPlayer_AI.h  ParanoidFourPlayer_IA.h  TwoPlayerMinMax_AI.h
include/AI/7WDuel/: 7WConstants.h  AI.h  Card.h  GameContext.h  GameController.h  GameEngine.h  MinMaxAI.h
include/AI/blockusAI/: AlonePlayer_AI.h  BlokusAI.h  Cache.h  Dummy_AI.h  TwoPlayerMinMax_AI.h
include/Core/: Algorithms.h  Common.h  flat_hash_map.h  hash.h  linalg.h  thread_pool.h  type.h
include/IA/: BlokusGame.h  BlokusIA.h  Cache.h  FourPlayerMaxN_IA.h  GenericMinMax_IA.h  IterativeIA.h  TwoPlayerMinMax_IA.h
include/ML/: Dataset.h  GameGenerator.h  HeuristicImpl.h  NetworkDef.h
include/UI/game/: GameConstants.h
include/UI/utils/: DrawUtils.h  DrawUtils_inl.h
src/: BlokusGame.cpp  BlokusGame.h  BlokusGameHelpers.cpp  BlokusGameHelpers.h  BlokusIA.cpp  BlokusIA.h  CMakeLists.txt  UnitTest.cpp  main.cpp
src/7W_ML/: CMakeLists.txt
src/AI/: AITournament.cpp  AlonePlayer_AI.cpp  BlokusAI.cpp  BlokusGame.cpp  BlokusGameHelpers.cpp  BlokusIA.cpp  CMakeLists.txt  Cache.cpp  Dummy_AI.cpp  FourPlayerMaxN_AI.cpp  FourPlayerMaxN_IA.cpp  GenericMinMax_AI.cpp  GenericMinMax_IA.cpp  IterativeAI.cpp  IterativeIA.cpp
src/AI/7WDuel/: AI.cpp  Card.cpp  GameContext.cpp  GameController.cpp  GameEngine.cpp  MinMaxAI.cpp
src/AI/blockusAI/: AITournament.cpp  AlonePlayer_AI.cpp  BlokusAI.cpp  BlokusGame.cpp  BlokusGameHelpers.cpp  Cache.cpp  Dummy_AI.cpp  FourPlayerMaxN_AI.cpp  GenericMinMax_AI.cpp  IterativeAI.cpp
src/Core/: CMakeLists.txt  Common.cpp  Common.h  flat_hash_map.h  type.h
src/IA/: BlokusGame.cpp  BlokusGame.h  BlokusGameHelpers.cpp  BlokusGameHelpers.h  BlokusIA.cpp  CMakeLists.txt  Cache.cpp  FourPlayerMaxN_IA.cpp  GenericMinMax_IA.cpp  IterativeIA.cpp  TwoPlayerMinMax_IA.cpp  UnitTest.cpp  main.cpp
src/ML/: CMakeLists.txt  Dataset.cpp  GameGenerator.cpp  HeuristicImpl.cpp
src/Tests/: UnitTest.cpp  main.cpp
src/UI/: CMakeLists.txt  MainWindow.ui
src/UI/precompile/: precompile_ui.h
src/UI/utils/: DrawUtils.cpp
src/timCore/: Common.h
tests/: CMakeLists.txt  UnitTest.cpp  main.cpp
tests/Blockus/: CMakeLists.txt
tests/Blockus/Console/: main.cpp
tests/Blockus/ML/: CMakeLists.txt
tests/Blockus/MLTool/: genDataset.cpp  trainModel.cpp
tests/Blockus/UI/: CMakeLists.txt
tests/Blockus/UI/widgets/: BlokusViewer.cpp  BlokusViewer.h
tests/Console/: CMakeLists.txt  UnitTest.cpp  main.cpp
tests/ML/: CMakeLists.txt  genDataset.cpp  main.cpp  trainModel.cpp
tests/ML/precompile/: precompile_ml_tests.h
tests/MLTool/: CMakeLists.txt  genDataset.cpp  main.cpp  trainModel.cpp
tests/Test7W/: CMakeLists.txt  ML.cpp  ML.h  Tournament.cpp  Tournament.h  UnitTest.cpp  generateDataset.cpp  main.cpp
tests/UI/: CMakeLists.txt  main.cpp
tests/UI/graphics/: BoardGraphicsItem.cpp  BoardGraphicsItem.h
tests/UI/widgets/: BlokusViewer.cpp  BlokusViewer.h
